# sql-ai-datathon-python

./: .env.example  .gitignore  README.md  app.py  embeddings.py  insert_data.py  main.py  pyproject.toml  rag.py  requirements.txt  search.py  task.md  test_connection.py
db/: connection.py
services/: embeddings_service.py  rag_service.py  retrieval_service.py
